try 3 at final submission

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Random Cocktail Recipe</title>
+    <title>Dependency</title>
     
     <link href="styleTest.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Cantarell&family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
